# thestorygraph-client

./: Makefile  README.md  mypy.ini  setup.cfg
src/tsg/: client.py  exc.py  models.py
src/tsg/handlers/: base.py  book.py  book_common.py  browse.py
tests/: conftest.py  test_client.py
