[metadata]
name = thestorygraph-client
version = 0.0.3
author = Grigory Statsenko
author_email = grisha100@gmail.com
description = A Simple Python Client for TheStoryGraph
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    thestorygraph
    books
    client
url = https://github.com/altvod/thestorygraph-py
project_urls =
    Bug Tracker = https://github.com/altvod/thestorygraph-py/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    aiohttp
    attrs
    beautifulsoup4
    requests
    yarl

[options.packages.find]
where = src

[options.extras_require]
testing =
    mypy
    pytest
    types-requests
build =
    build
    twine
